--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -181,6 +181,11 @@
                     <div><strong>Combo Package Update History</strong> </div>
                     <div class="tooltip">COMBO PACKAGE </div>
                 </div>
+                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Reconsolation')"><i
+                        class="fas fa-window-close"></i>
+                    <div><strong>Reconsolation</strong> </div>
+                    <div class="tooltip">RECONSOLATION </div>
+                </div>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
