--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -101,8 +101,9 @@
                 <li *ngIf="username == 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lcorecharge/1');setActiveLinkTab($event)"><i
                             class='fa-solid fa-indian-rupee-sign icon'></i> &nbsp;LCO Recharge</a></li>
-                <li *ngIf="!isReception && username !== 'manikandan' && navigationList.lcorecharge"><a
-                        (click)="navgetToUrl('/lco_recharge/3');setActiveLinkTab($event)"><i
+                <li
+                    *ngIf="!isReception && username !== 'manikandan'&& msoName == 'AJK TV' && navigationList.lcorecharge">
+                    <a (click)="navgetToUrl('/lco_recharge/3');setActiveLinkTab($event)"><i
                             class='fa fa-fw fa-circle-o icon'></i> &nbsp;Admin Recharge</a></li>
                 <li *ngIf="!isReception &&username == 'manikandan' && navigationList.lcorecharge"><a
                         (click)="navgetToUrl('/lcorecharge/2');setActiveLinkTab($event)"><i
@@ -597,14 +598,18 @@
                 &nbsp;
                 &nbsp;
                 <div class="nav-content w-100 d-flex justify-content-between align-items-center">
-                    <!-- <div *ngIf="!isOperator" class="version col-4 col-md-4">
+
+                    <!-- <div *ngIf="isSubscriber" class="version col-4 col-md-4">
                         <span class="ver" style="color: var(--role-color);"> {{role}}
                             &nbsp;</span>
                     </div> -->
-                    <div *ngIf="isOperator" class="version col-4 col-md-4">
-                        <span class="ver" style="color: var(--role-color);"> {{operatorname}}
+                    <div *ngIf="isOperator || isSubLco || isSubscriber " class="version col-4 col-md-4 mobile_nav">
+                        <span class="ver" style="color: var(--role-color);"> {{operatorname}} {{retailername}}
+                            {{subscribername}}
                             &nbsp;</span>
                     </div>
+
+
                     <div *ngIf="!isSearch"
                         class="search-and-image col-7 col-md-7 col-sm-7 col-lg-7 d-flex justify-content-start align-items-center"
                         (clickOutside)="closeDropdown()">
