--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -15,7 +15,8 @@
         <div class="col-12 col-md-6 d-flex justify-content-center align-items-center tooltip-container">
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-date-range-input [rangePicker]="picker">
-                    <input matStartDate matInput placeholder="Start date" value="fromdate"  (dateChange)="getFromDate($event)">
+                    <input matStartDate matInput placeholder="Start date" value="fromdate"
+                        (dateChange)="getFromDate($event)">
                     <input matEndDate matInput placeholder="End date" value="todate" (dateChange)="getToDate($event)">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -170,9 +171,13 @@
     </div>
 </div>
 
-<div *ngIf="type == 'Synchronization'">
-    <div class="Head d-flex justify-content-between align-items-center mb-3">
+<div *ngIf="type == 'Synchronization' || type == 'Reconsolation'">
+    <div *ngIf="type == 'Synchronization'" class="Head d-flex justify-content-between align-items-center mb-3">
         <span class="span">Synchronization REPORT</span>
+        <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
+    </div>
+    <div *ngIf="type == 'Reconsolation'" class="Head d-flex justify-content-between align-items-center mb-3">
+        <span class="span">RECONSOLATION REPORT</span>
         <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
     </div>
     <div class="container">
@@ -187,7 +192,8 @@
                         <div class="col-12 col-md-6">
                             <label class="btn custom-btn mb-2">
                                 <i class="fa fa-plus"></i> Choose
-                                <input type="file" style="display: none;" (change)="handleFileInput($event)" accept=".xlsx,.xls,.csv">
+                                <input type="file" style="display: none;" (change)="handleFileInput($event)"
+                                    accept=".xlsx,.xls,.csv">
                             </label>
                             <span class="mx-3" style="color:#0a21d0">{{filePath }} </span>
 
@@ -244,3 +250,70 @@
     </div>
 </div>
 
+<!-- <div *ngIf="type == 'Reconsolation'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3">
+        <span class="span">RECONSOLATION REPORT</span>
+        <i class="fa fa-close close-icon" (click)="onNoClick()"></i>
+    </div>
+    <div class="container">
+        <div class="card d-block justify-content-center align-items-center mb-3"
+            style="border: 1px solid #055478;padding: 1rem;">
+            <div class="col-12 display align-items-center">
+                <div class="col-12 col-md-12  justify-content-center align-items-center  ">
+                    <div class=" display mb-3">
+                        <div class="col-12 col-md-6 mb-2">
+                            <span style="color: #243359;" for="">File Upload</span>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <label class="btn custom-btn mb-2">
+                                <i class="fa fa-plus"></i> Choose
+                                <input type="file" style="display: none;" (change)="handleFileInput($event)"
+                                    accept=".xlsx,.xls,.csv">
+                            </label>
+                            <span class="mx-3" style="color:#0a21d0">{{filePath }} </span>
+
+                        </div>
+                    </div>
+                    <div class=" display mb-3">
+                        <div class="col-12 col-md-6 sidename">
+                            <span style="color: #243359;" for="">Select Date</span>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <mat-form-field appearance="outline" style="width: 100%;">
+                                <mat-date-range-input [rangePicker]="picker">
+                                    <input matStartDate matInput placeholder="Start date"
+                                        (dateChange)="getFromDate($event)">
+                                    <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
+                                </mat-date-range-input>
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-date-range-picker #picker></mat-date-range-picker>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="input_box display mb-3">
+                        <div class="col-12 col-md-6 sidename">
+                            <span for="">Select Product</span>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <select placeholder="Select the Product Type" [(ngModel)]="productType">
+                                <option value="" disabled>Select a Product Type</option>
+                                <option *ngFor="let po of product" [value]="po.value">{{po.lable}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="input_box display1 mb-3">
+                        <div class="col-6 col-md-6 sidename">
+                            <span for="">Reports</span>
+                        </div>
+                        <div class="col-6 col-md-6 display1">
+                            <div class="export-icon col-6 col-md-3 mx-2" (click)="getExcel()">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                                <div class="tooltip">Excel</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
