--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -80,7 +80,7 @@
                 <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady($event)" [enableCellTextSelection]="true"
-                    [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged()">
+                    [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged($event)">
                 </ag-grid-angular>
             </div>
         </div>
@@ -162,7 +162,7 @@
                 </div>
                 <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
-                    [rowData]="rowData" [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged()">
+                    [rowData]="rowData" [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged($event)">
                 </ag-grid-angular>
             </div>
         </div>
