--- a/src/app/_core/charts/bobbulechart/bobbulechart.component.html
+++ b/src/app/_core/charts/bobbulechart/bobbulechart.component.html
@@ -3,45 +3,46 @@
 <div class="bubble-card" style="height: 260px; width: 100%;">
     <div class="bubble-left">
         <div class="bubble-wrap">
-            <div class="bubble pink" [ngStyle]="{
-        width: '75px',
-        height:'75px',
-        top: '5px',
-        left: '20px'
-      }" [attr.title]="bubbleData[3].label + ': ' + bubbleData[3].count">
+            <!-- <div class="bubble pink" [ngStyle]="{ width: '75px', height:'75px', top: '5px',left: '20px'}"
+                [attr.title]="bubbleData[3].label + ': ' + bubbleData[3].count">
                 {{ bubbleData[3].count }}
-                <!-- {{0}} -->
             </div>
 
-            <div class="bubble blue" [ngStyle]="{
-        width: '80px',
-        height: '80px',
-        top: '0px',
-        left: '80px'
-      }" [attr.title]="bubbleData[0].label + ': ' + bubbleData[0].count">
+            <div class="bubble blue" [ngStyle]="{ width: '80px',height: '80px', top: '0px', left: '80px' }"
+                [attr.title]="bubbleData[0].label + ': ' + bubbleData[0].count">
                 {{ bubbleData[0].count }}
-                <!-- {{10}} -->
             </div>
 
-            <div class="bubble cyan" [ngStyle]="{
-        width: '70px',
-        height: '70px',
-        top: '60px',
-        left: '15px'
-      }" [attr.title]="bubbleData[2].label + ': ' + bubbleData[2].count">
+            <div class="bubble cyan" [ngStyle]="{ width: '70px', height: '70px',top: '60px', left: '15px'}"
+                [attr.title]="bubbleData[2].label + ': ' + bubbleData[2].count">
                 {{ bubbleData[2].count }}
-                <!-- {{20}} -->
             </div>
 
-            <div class="bubble green" [ngStyle]="{
-        width: '100px',
-        height: '100px',
-        top: '60px',
-        left: '60px'
-      }" [attr.title]="bubbleData[1].label + ': ' + bubbleData[1].count">
+            <div class="bubble green" [ngStyle]="{width: '100px',height: '100px',top: '60px',left: '60px'}"
+                [attr.title]="bubbleData[1].label + ': ' + bubbleData[1].count">
                 {{ bubbleData[1].count }}
-                <!-- {{10}} -->
+            </div> -->
+
+            <div class="bubble pink" [ngStyle]="getBubbleStyle(3)"
+                [attr.title]="bubbleData[3].label + ': ' + bubbleData[3].count">
+                {{ bubbleData[3].count }}
             </div>
+
+            <div class="bubble blue" [ngStyle]="getBubbleStyle(0)"
+                [attr.title]="bubbleData[0].label + ': ' + bubbleData[0].count">
+                {{ bubbleData[0].count }}
+            </div>
+
+            <div class="bubble cyan" [ngStyle]="getBubbleStyle(2)"
+                [attr.title]="bubbleData[2].label + ': ' + bubbleData[2].count">
+                {{ bubbleData[2].count }}
+            </div>
+
+            <div class="bubble green" [ngStyle]="getBubbleStyle(1)"
+                [attr.title]="bubbleData[1].label + ': ' + bubbleData[1].count">
+                {{ bubbleData[1].count }}
+            </div>
+            
         </div>
     </div>
 
