--- a/src/app/admin/features/Bulk_operation/recurring/recurring.component.html
+++ b/src/app/admin/features/Bulk_operation/recurring/recurring.component.html
@@ -28,7 +28,6 @@
                 <button class="btn custom-btn mx-1 mb-3 bttn" type="button" (click)="submit(2)">
                     On list
                 </button>
-
                 <button class="btn custom-btn mx-1 mb-3  bttn" type="button" (click)="submit(3)">
                     Off list
                 </button>
@@ -40,7 +39,6 @@
                         <img src="/assets/images/icons/pdf.png" alt="PDF Icon">
                     </div>
                 </div> -->
-
             </div>
         </div>
     </div>
@@ -122,7 +120,7 @@
                 <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="reccuringData" (gridReady)="onGridReady($event)" [enableCellTextSelection]="true"
-                    (selectionChanged)="onSelectionChanged()">
+                    (selectionChanged)="onSelectionChanged($event)">
                 </ag-grid-angular>
             </div>
         </div>
